navbar correction mobile

--- a/stylesheet2.css
+++ b/stylesheet2.css
@@ -51,6 +51,8 @@
   .head {
     list-style: none;
     display: flex;
+    justify-content: flex-end;
+    flex-wrap: wrap-reverse;
     align-items: center;
   }
 
